# TI0162-IOT

./: .gitignore  Dockerfile  PROJECT_METHODOLOGY.md  README.md  podman-compose.yml  rsync.sh
workspace/: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.workspace  Dockerfile.deployment  ESP32-C3_IOT_SYSTEM_OVERVIEW.md  PLAN.md  README.md  build_test_all.py  scp_bme280.sh  scp_wifi.sh  test_working_modules.py
workspace/.cargo/: config.toml
workspace/_examples/wifi-simple-embassy/: Cargo.toml
workspace/_examples/wifi-simple-embassy/src/: lib.rs
workspace/_examples/wifi-simple-must-working/: Cargo.toml
workspace/_examples/wifi-simple-must-working/.cargo/: config.toml
workspace/_examples/wifi-simple-must-working/src/: mqtt_client.rs  wifi_blocking.rs
workspace/apps/: README.md
workspace/apps/main-app/: Cargo.toml  INTEGRATION_REPORT.md  README.md
workspace/apps/main-app/src/: main.rs  main_container.rs
workspace/apps/main-min/: Cargo.toml  REAL_MQTT_IMPLEMENTATION.md  test_build.sh
workspace/apps/main-min/src/: config.rs  connectivity.rs  main.rs  monitor.rs  sensor.rs
workspace/apps/main-nodeps/: Cargo.toml  README.md  memory.x
workspace/apps/main-nodeps/src/: bme280.rs  config.rs  main.rs  mqtt.rs  wifi.rs
workspace/blinky/: Cargo.toml  README.md
workspace/blinky/.cargo/: config.toml
workspace/blinky/src/: main.rs
workspace/bme280-embassy/: Cargo.toml  README.md
workspace/bme280-embassy/examples/: basic_reading.rs  full_system.rs  hal_integration.rs
workspace/bme280-embassy/src/: bme280.rs  i2c_device.rs  lib.rs  main.rs  trait_impl.rs
workspace/bme280-embassy/tests/: bme280_tests.rs  host_tests.rs
workspace/bme280-tests/: Cargo.toml
workspace/core/: README.md
workspace/core/iot-common/: Cargo.toml  README.md
workspace/core/iot-common/src/: error.rs  lib.rs  standard_config.rs  standard_messages.rs  standard_timing.rs
workspace/core/iot-config/: Cargo.toml  README.md
workspace/core/iot-config/config/: default.json  development.json  production.json
workspace/core/iot-config/examples/: json_config_demo.rs
workspace/core/iot-config/src/: embedded.rs  feature_flags.rs  flash_integration.rs  lib.rs  unified.rs  validation.rs
workspace/core/iot-container/: Cargo.toml
workspace/core/iot-container/src/: config.rs  container.rs  factory.rs  lib.rs  mocks.rs  traits.rs
workspace/core/iot-container/tests/: integration_tests.rs
workspace/core/iot-hal/: Cargo.toml  README.md
workspace/core/iot-hal/src/: error.rs  esp32c3.rs  mock.rs
workspace/core/iot-performance/: README.md
workspace/core/iot-performance/src/: baseline.rs  regression.rs  timing.rs
workspace/core/iot-storage/: Cargo.toml  README.md
workspace/core/iot-storage/benches/: storage_benchmarks.rs
workspace/core/iot-storage/examples/: complete_storage_demo.rs
workspace/core/iot-storage/src/: atomic.rs  config.rs  esp32c3.rs  flash.rs  lib.rs  traits.rs  wear_leveling.rs
workspace/core/iot-storage/tests/: integration_tests.rs
workspace/docs/: CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  HARDWARE.md  HARDWARE_VALIDATION.md  REORGANIZATION_SUMMARY.md  TROUBLESHOOTING.md
workspace/docs/architecture/: ANALYSIS.md
workspace/docs/business/: BUSINESS_VALUE.md
workspace/docs/implementation/: DEPLOYMENT_GUIDE.md  PHASE_2_SUMMARY.md
workspace/docs/methodology/: EXPERT_DRIVEN_DEVELOPMENT.md  PROJECT_PLAN.md
workspace/docs/technical/: ARCHITECTURE.md  PERFORMANCE.md
workspace/drivers/: README.md
workspace/drivers/bme280-embassy/: Cargo.toml  README.md  build.rs
workspace/drivers/bme280-embassy/.cargo/: config.toml
workspace/drivers/mqtt-embassy/: Cargo.toml  README.md
workspace/drivers/serial-console-embassy/: Cargo.toml  build.rs
workspace/drivers/wifi-embassy/: Cargo.toml  README.md
workspace/examples/: README.md  complete_system.rs  error_handling_demo.rs  sensor_to_mqtt.rs
workspace/examples/wifi-simple-embassy/: README.md
workspace/examples/wifi-simple-must-working/: README.md
workspace/iot-common/: Cargo.toml
workspace/iot-common/examples/: error_conversion.rs  error_handling.rs
workspace/iot-common/src/: lib.rs  result.rs  testing.rs
workspace/iot-common/tests/: comprehensive_tests.rs
workspace/iot-container/: Cargo.toml  README.md
workspace/iot-container/src/: config.rs  container.rs  factory.rs  lib.rs  mocks.rs  traits.rs
workspace/iot-hal/src/: config.rs  error.rs  esp32c3.rs  lib.rs  traits.rs
workspace/iot-performance/: Cargo.toml
workspace/iot-performance/src/: analysis.rs  esp32c3.rs  lib.rs  memory.rs  monitor.rs  regression.rs  timing.rs
workspace/main-app/: Cargo.toml  README.md
workspace/main-app/.cargo/: config.toml
workspace/main-app/src/: main.rs  main_container.rs
workspace/mqtt-config/: mosquitto.conf
workspace/mqtt-embassy/: Cargo.toml  README.md  build.rs
workspace/mqtt-embassy/.cargo/: config.toml
workspace/mqtt-embassy/examples/: basic_mqtt.rs  mqtt_test_working.rs
workspace/mqtt-embassy/src/: lib.rs  message.rs  mqtt_client.rs  trait_impl.rs
workspace/serial-console-embassy/: Cargo.toml  README.md
workspace/serial-console-embassy/.cargo/: config.toml
workspace/serial-console-embassy/examples/: basic_console.rs  simple_working_console.rs  system_console.rs
workspace/serial-console-embassy/src/: commands.rs  config.rs  console.rs  lib.rs
workspace/simple-iot/: Cargo.toml  README.md  build.rs
workspace/simple-iot/src/: bme280.rs  bme280_mqtt.rs  bme280_simple.rs  lib.rs
workspace/supporting/: README.md
workspace/wifi-embassy/: Cargo.toml  README.md  build.rs
workspace/wifi-embassy/.cargo/: config.toml
workspace/wifi-embassy/examples/: simple_connect.rs  wifi_mqtt_test.rs  wifi_test.rs  wifi_test_new.rs
workspace/wifi-embassy/src/: lib.rs  trait_impl.rs  wifi_manager.rs
workspace/wifi-simple/: Cargo.toml
workspace/wifi-simple/src/: main.rs  wifi.rs
workspace/wifi-synchronous/: Cargo.toml  README.md
workspace/wifi-synchronous/.cargo/: config.toml
workspace/wifi-synchronous/examples/: simple_wifi_sync.rs  wifi_manager_sync.rs
(+49 files in other folders)
