[workspace]
resolver = "2"
members = [
    "blinky",
    "bme280-embassy",
    "wifi-embassy", 
    "mqtt-embassy",
    "serial-console-embassy",
    "main-app",
]

[workspace.dependencies]
# ESP32-C3 Hardware Abstraction Layer - latest versions
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }

# Embassy Async Framework
embassy-executor = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-time = { version = "0.4" }
embassy-sync = { version = "0.7" }
embassy-futures = { version = "0.1" }

# Critical section resolver - unified across workspace 
critical-section = { version = "1.2", features = ["restore-state-u8"] }

# UART and async I/O
embedded-io-async = "0.6"
embedded-hal-async = "1.0"

# String processing and utilities
heapless = "0.8"
nb = "1.0"
static_cell = "2.1"

# Memory allocation
esp-alloc = { version = "0.8.0" }

# Debugging and panic handling
rtt-target = "0.5"
panic-rtt-target = "0.1"

# BME280 sensor
bme280-rs = { version = "0.4", features = ["async"] }

# Serde for JSON serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# Network and WiFi (when needed)
embassy-net = { version = "0.5", features = ["tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }
smoltcp = { version = "0.11", default-features = false, features = ["socket-tcp", "socket-udp", "async"] }

[workspace.metadata.esp-hal-settings]
esp32c3_direct_boot = true

# Unified profiles at workspace level to avoid warnings
[profile.dev]
opt-level = "z"
debug = true

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"

