[package]
name = "blinky"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }
esp-rom-sys = { workspace = true }

# Debugging - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Legacy logging
defmt = "0.3"

