[package]
name = "bme280-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Use workspace versions to avoid conflicts
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }

# Embassy framework from workspace
embassy-executor = { workspace = true }
embassy-time = { workspace = true }

# Debugging from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# I2C Async Support from workspace
embedded-hal-async = { workspace = true }

# Legacy dependencies (will be phased out)
defmt = "0.3"
esp-rom-sys = { version = "0.1", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }



[[example]]
name = "basic_reading"
path = "examples/basic_reading.rs"