[package]
name = "bme280-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }
esp-rom-sys = { workspace = true }

# Embassy framework - from workspace
embassy-executor = { workspace = true }
embassy-time = { workspace = true }

# I2C Async Support - from workspace
embedded-hal-async = { workspace = true }

# BME280 sensor - from workspace
bme280-rs = { workspace = true }

# Debugging - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Legacy dependencies (will be phased out)
defmt = "0.3"

[[example]]
name = "basic_reading"
path = "examples/basic_reading.rs"