[package]
name = "iot-performance"
version = "1.0.0"
edition = "2021"
authors = ["IoT System Development Team"]
description = "Performance Monitoring and Optimization for ESP32-C3 IoT Environmental Monitoring System"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/iot-system"
documentation = "https://docs.rs/iot-performance"
readme = "README.md"
keywords = ["esp32", "embedded", "iot", "performance", "profiling"]
categories = ["embedded", "no-std", "development-tools::profiling"]

[dependencies]
# Core async runtime (using workspace versions for consistency)
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }

# System integration
iot-common = { path = "../iot-common" }

# Embedded collections for no-std
heapless = { workspace = true }

# Critical section support
critical-section = { workspace = true }

# Optional ESP32-C3 specific performance counters
esp-hal = { workspace = true, optional = true }

# Memory allocation tracking (optional)
linked_list_allocator = { version = "0.10", optional = true }

# RTT for performance output
rtt-target = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["esp32c3"]
esp32c3 = ["esp-hal"]
alloc = ["linked_list_allocator"]
detailed-profiling = []
flash-analysis = []

[lib]
name = "iot_performance"