[package]
name = "main-app"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "IoT main application integrating BME280, WiFi, and MQTT modules for ESP32-C3"
license = "MIT OR Apache-2.0"

[dependencies]
# Local modules - simplified to test basic integration first
mqtt-embassy = { path = "../mqtt-embassy" }

# Embassy Async Framework (matching working modules)
embassy-executor = { version = "0.7", features = ["task-arena-size-20480"] }
embassy-time = "0.4"

# ESP32-C3 HAL (matching working modules)
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.6", features = ["esp32c3"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal", features = ["esp32c3", "wifi", "embassy-net"] }

# Console/Debug
esp-println = { version = "0.13.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
rtt-target = "0.5"

# Embassy network
embassy-net = "0.7"
static_cell = "2.0"

[[bin]]
name = "main"
path = "src/main.rs"