[package]
name = "main-app"
version = "1.0.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "IoT Environmental Monitoring System - BME280 sensor with WiFi/MQTT Integration for ESP32-C3"
license = "MIT OR Apache-2.0"

[dependencies]
# Local IoT modules - all integrated
bme280-embassy = { path = "../bme280-embassy" }
wifi-embassy = { path = "../wifi-embassy" }
mqtt-embassy = { path = "../mqtt-embassy" }
serial-console-embassy = { path = "../serial-console-embassy" }

# ESP32-C3 Hardware Abstraction Layer - use workspace versions
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }

# Embassy Async Framework - use workspace versions
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }

# Critical section resolver will be resolved automatically by Embassy

# UART and async I/O - use workspace versions
embedded-io-async = { workspace = true }

# String processing and utilities - use workspace versions
heapless = { workspace = true }
nb = { workspace = true }
static_cell = { workspace = true }

# Memory allocation - use workspace version
esp-alloc = { workspace = true }

# Debugging and panic handling - use workspace versions
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

[[bin]]
name = "main"
path = "src/main.rs"