[package]
name = "mqtt-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "MQTT client module using Embassy async framework for ESP32-C3"
license = "MIT OR Apache-2.0"

[dependencies]
# Embassy Async Framework - from workspace
embassy-executor = { workspace = true }
embassy-net = { workspace = true }
embassy-time = { workspace = true }

# Async I/O support for MQTT TCP connections - from workspace
embedded-io-async = { workspace = true }

# Data structures and JSON serialization - from workspace
heapless = { workspace = true }
serde = { workspace = true }
serde-json-core = { workspace = true }

# RTT debugging - from workspace
rtt-target = { workspace = true }

# ESP32-C3 HAL and WiFi (for examples only) - from workspace
esp-hal = { workspace = true, optional = true }
esp-wifi = { workspace = true, optional = true }
esp-alloc = { workspace = true, optional = true }
esp-hal-embassy = { workspace = true, optional = true }
static_cell = { workspace = true, optional = true }
panic-rtt-target = { workspace = true, optional = true }
smoltcp = { workspace = true, optional = true }

# WiFi Embassy integration (for working example)
wifi-embassy = { path = "../wifi-embassy", optional = true }

[features]
default = []
examples = ["esp-hal", "esp-wifi", "esp-alloc", "esp-hal-embassy", "static_cell", "panic-rtt-target", "smoltcp", "wifi-embassy"]

[lib]
name = "mqtt_embassy"
path = "src/lib.rs"

[[example]]
name = "mqtt_test"
path = "examples/mqtt_test.rs"

[[example]]
name = "mqtt_test_working"
path = "examples/mqtt_test_working.rs"