[package]
name = "serial-console-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "Serial console interface for ESP32-C3 IoT system configuration and monitoring"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }

# Embassy Async Framework - from workspace
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }

# UART and async I/O - from workspace
embassy-usb = { workspace = true, optional = true }
embedded-io-async = { workspace = true }

# String processing and utilities - from workspace
heapless = { workspace = true }
nb = { workspace = true }
static_cell = { workspace = true }

# Memory allocation - from workspace
esp-alloc = { workspace = true }

# Debugging and panic handling - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Integration with other modules
wifi-embassy = { path = "../wifi-embassy", optional = true }
mqtt-embassy = { path = "../mqtt-embassy", optional = true }
bme280-embassy = { path = "../bme280-embassy", optional = true }

[features]
default = []
wifi = ["dep:wifi-embassy"]
mqtt = ["dep:mqtt-embassy"] 
sensor = ["dep:bme280-embassy"]
usb = ["dep:embassy-usb"]
full = ["wifi", "mqtt", "sensor"]

[[example]]
name = "basic_console"
path = "examples/basic_console.rs"

[[example]]
name = "simple_working_console"
path = "examples/simple_working_console.rs"

[[example]]
name = "direct_usb_console"
path = "examples/direct_usb_console.rs"

[[example]]
name = "usb_bridge_console"
path = "examples/usb_bridge_console.rs"

[[example]]
name = "system_console"
path = "examples/system_console.rs"
required-features = ["full"]
