[package]
name = "simple-iot"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "Simple ESP32-C3 IoT System - BME280 + WiFi + MQTT"

[lib]
name = "simple_iot"
path = "src/lib.rs"

[[bin]]
name = "bme280_simple"
path = "src/bme280_simple.rs"

[[bin]]
name = "bme280_mqtt"
path = "src/bme280_mqtt.rs"

[dependencies]
# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }

# Embassy Async Framework - from workspace
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }

# Network and connectivity - from workspace
embassy-net = { workspace = true }
smoltcp = { workspace = true }
esp-wifi = { workspace = true }

# I2C and async I/O - from workspace
embedded-io-async = { workspace = true }
embedded-hal-async = { workspace = true }

# BME280 sensor - from workspace
bme280-rs = { workspace = true }

# String processing and utilities - from workspace
heapless = { workspace = true }
static_cell = { workspace = true }

# Memory allocation - from workspace
esp-alloc = { workspace = true }

# JSON serialization - from workspace
serde = { workspace = true }
serde-json-core = { workspace = true }

# Debugging and panic handling - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Force portable-atomic override (ESP32-C3 compatibility)
portable-atomic = { workspace = true }

# Local modules
wifi-embassy = { path = "../wifi-embassy" }