[package]
name = "wifi-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "WiFi connectivity module using Embassy async framework for ESP32-C3"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP32-C3 Hardware Abstraction Layer (based on working examples)
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }

# WiFi Hardware and Network Stack (from working wifi-simple-embassy)
esp-wifi = { version = "0.15.0", features = ["esp32c3", "wifi", "smoltcp"] }
esp-alloc = { version = "0.8.0" }

# Embassy Async Framework (from working examples)
embassy-executor = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-net = { version = "0.7", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.4" }

# Static allocation and utilities
static_cell = "2.0"
heapless = "0.8"

# For JSON formatting in MQTT example
serde = { version = "1.0", default-features = false, optional = true }
serde-json-core = { version = "0.6", optional = true }
embedded-io-async = "0.6"

# RTT debugging (following bme280-embassy pattern)
rtt-target = "0.5"
panic-rtt-target = "0.1"

[lib]
name = "wifi_embassy"
path = "src/lib.rs"

[[example]]
name = "wifi_test"
path = "examples/wifi_test.rs"

[[example]]
name = "wifi_test_new"
path = "examples/wifi_test_new.rs"

[[example]]
name = "wifi_mqtt_test"
path = "examples/wifi_mqtt_test.rs"