[package]
name = "wifi-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "WiFi connectivity module using Embassy async framework for ESP32-C3"
license = "MIT OR Apache-2.0"

[features]
default = []
# Enable IoT Container integration
container = ["async-trait"]

[dependencies]
# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }

# WiFi Hardware and Network Stack - from workspace
esp-wifi = { workspace = true }
esp-alloc = { workspace = true }

# Embassy Async Framework - from workspace
embassy-executor = { workspace = true }
embassy-net = { workspace = true }
embassy-time = { workspace = true }

# Static allocation and utilities - from workspace
static_cell = { workspace = true }
heapless = { workspace = true }

# For JSON formatting in MQTT example - from workspace
serde = { workspace = true, optional = true }
serde-json-core = { workspace = true, optional = true }
embedded-io-async = { workspace = true }

# RTT debugging - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# IoT Container integration (optional)
iot-container = { path = "../iot-container", default-features = false, optional = true }
iot-common = { path = "../iot-common", default-features = false }
async-trait = { version = "0.1", optional = true }

[lib]
name = "wifi_embassy"
path = "src/lib.rs"

[[example]]
name = "simple_connect"
path = "examples/simple_connect.rs"

[[example]]
name = "wifi_test"
path = "examples/wifi_test.rs"

[[example]]
name = "wifi_test_new"
path = "examples/wifi_test_new.rs"

[[example]]
name = "wifi_mqtt_test"
path = "examples/wifi_mqtt_test.rs"