[package]
name = "wifi-simple"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", features = ["esp32c3", "unstable"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal", features = ["esp32c3", "wifi", "smoltcp"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal" }
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-dhcpv4", "proto-ipv4", "socket-dhcpv4", "socket-tcp", "socket-udp"] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e", default-features = false, features = ["dhcpv4", "tcp"] }
rtt-target = "0.5"
panic-rtt-target = "0.1"