[package]
name = "wifi-synchronous"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "Synchronous WiFi connectivity module for ESP32-C3"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }

# WiFi Hardware and Network Stack - from workspace  
esp-wifi = { workspace = true }
esp-alloc = { workspace = true }

# Synchronous networking stack
smoltcp = { workspace = true }
heapless = { workspace = true }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e", default-features = false, features = ["dhcpv4", "tcp"] }

# Debugging - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

[lib]
name = "wifi_synchronous"
path = "src/lib.rs"

[[example]]
name = "simple_wifi_sync"
path = "examples/simple_wifi_sync.rs"

[[example]]
name = "wifi_manager_sync"
path = "examples/wifi_manager_sync.rs"