[package]
name = "wifi-simple-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "Simple WiFi + Embassy library for ESP32-C3 using esp-hal 1.0.0-rc.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Core ESP32-C3 Hardware Abstraction Layer
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "log-04", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }

# WiFi Hardware and Network Stack
esp-wifi = { version = "0.15.0", features = ["esp32c3", "wifi", "smoltcp", "log-04"] }
esp-alloc = { version = "0.8.0" }

# Embassy Async Framework
embassy-executor = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-net = { version = "0.7", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.4" }

# Static allocation
static_cell = { version = "2.0" }

# Logging and error handling
log = { version = "0.4" }
heapless = { version = "0.8" }

[dev-dependencies]
rtt-target = { version = "0.5" }
panic-rtt-target = { version = "0.1" }

[features]
default = []

[lib]
name = "wifi_simple_embassy"
path = "src/lib.rs"

[[example]]
name = "basic_wifi"
path = "examples/basic_wifi.rs"