[package]
name = "main-app"
version = "1.0.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "IoT Environmental Monitoring System - Complete ESP32-C3 Integration"
license = "MIT OR Apache-2.0"
default-run = "main"

[dependencies]
# Local IoT modules - full integration with complete feature set
bme280-embassy = { path = "../../drivers/bme280-embassy" }
wifi-embassy = { path = "../../drivers/wifi-embassy" }
mqtt-embassy = { path = "../../drivers/mqtt-embassy" }
serial-console-embassy = { path = "../../drivers/serial-console-embassy" }
iot-performance = { path = "../../core/iot-performance", features = ["esp32c3"] }

# IoT Container dependency injection system - FULL FEATURED APPLICATION
iot-container = { path = "../../core/iot-container", features = ["esp32c3"] }
iot-hal = { path = "../../core/iot-hal", features = ["esp32c3"] }
iot-common = { path = "../../core/iot-common" }

# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }
esp-rom-sys = { workspace = true }

# Embassy Async Framework - from workspace
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }

# Network and connectivity - from workspace
embassy-net = { workspace = true }
smoltcp = { workspace = true }

# I2C and async I/O - from workspace
embedded-io-async = { workspace = true }
embedded-hal-async = { workspace = true }

# String processing and utilities - from workspace
heapless = { workspace = true }
static_cell = { workspace = true }

# Memory allocation and storage - from workspace
esp-alloc = { workspace = true }
esp-storage = { workspace = true }
embedded-storage = { workspace = true }
sequential-storage = { workspace = true }

# JSON serialization for MQTT - from workspace
serde = { workspace = true }
serde-json-core = { workspace = true }

# Debugging and panic handling - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Force portable-atomic override (ESP32-C3 compatibility)
portable-atomic = { workspace = true }

# Primary IoT application with real hardware integration (DEFAULT)
[[bin]]
name = "main"
path = "src/main.rs"

# Dependency injection architecture demonstration (Example/Educational)
[[bin]]
name = "main_container"
path = "src/main_container.rs"

[features]
default = []
# Use the new dependency injection container - FULL FEATURED APPLICATION
container = []
# Use mock implementations for testing
mock = ["iot-container/mock"]